k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-ml
  labels:
    name: traffic-ml
    environment: production
